--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <html>
 <head>
-  <title>Is this thing working?</title>
+  <title>HAIL HELIX OUR LORD</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   
-  <h1>HAIL HELIX OUR LORD</h1>
+  <h1 class='title'>ALL HAIL HELIX OUR LORD</h1>
+  <img src='helix-lord.gif' class='photo-big'></img>
+  
+  <div id='space'></div>
+  
+  <p>Watch TwitchPlaysPokemon <a href='http://www.twitch.tv/twitchplayspokemon'>here</a></p>
+  <p>Follow the live commentary on <a href='http://www.reddit.com/live/sw7bubeycai6hey4ciytwamw3a'>Reddit</a></p>
+  <p>This page is made by <a href='http://esusatyo.net'>Enrico Susatyo</a>. Follow on Twitter <a href='https://twitter.com/esusatyo'>@esusatyo</a></p>
   
 </body>
 </html>
