--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
   <p>Follow the live commentary on <a href='http://www.reddit.com/live/sw7bubeycai6hey4ciytwamw3a'>Reddit</a></p>
   <p>This page is made by <a href='http://esusatyo.net'>Enrico Susatyo</a>. Follow on Twitter <a href='https://twitter.com/esusatyo'>@esusatyo</a></p>
   
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-17581314-6', 'hailhelix.com');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
