--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <p>Watch TwitchPlaysPokemon <a href='http://www.twitch.tv/twitchplayspokemon'>here</a></p>
   <p>Follow the live commentary on <a href='http://www.reddit.com/live/sw7bubeycai6hey4ciytwamw3a'>Reddit</a></p>
-  <p>This page is made by <a href='http://esusatyo.net'>Enrico Susatyo</a>. Follow on Twitter <a href='https://twitter.com/esusatyo'>@esusatyo</a></p>
+  <p>This website is made by <a href='http://esusatyo.net'>Enrico Susatyo</a>, follow on Twitter <a href='https://twitter.com/esusatyo'>@esusatyo</a></p>
   
   <!-- Google Analytics -->
   <script>
